--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,17 @@
-alembic==1.7.5
-attrs==21.2.0
 certifi==2021.10.8
+cffi==1.14.6
 charset-normalizer==2.0.8
-click==8.0.3
 colorama==0.4.4
 commonmark==0.9.1
-Deprecated==1.2.13
-execnet==1.9.0
-Flask==2.0.2
-Flask-Login==0.5.0
-Flask-Migrate==3.1.0
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
+greenlet==0.4.13
+hpy==0.0.3
 idna==3.3
-iniconfig==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.3
-Mako==1.1.6
-MarkupSafe==2.0.1
-packaging==21.3
-pluggy==1.0.0
-psycopg2==2.9.2
-py==1.11.0
+kafka-python==2.0.2
 Pygments==2.10.0
-pyparsing==3.0.6
-pyperclip==1.8.2
-pytest==6.2.5
-pytest-flask==1.2.0
-pytest-forked==1.3.0
-pytest-xdist==2.4.0
-redis==4.0.2
+readline==6.2.4.1
 requests==2.26.0
-rich==10.15.2
-SQLAlchemy==1.4.27
-toml==0.10.2
+rich==10.15.1
+six==1.16.0
+tornado==6.1
+typing_extensions==4.0.1
 urllib3==1.26.7
-Werkzeug==2.0.2
-wrapt==1.13.3
