--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,54 @@
+alembic==1.7.5
+attrs==21.2.0
+bidict==0.21.4
 certifi==2021.10.8
-cffi==1.14.6
 charset-normalizer==2.0.8
+click==8.0.3
 colorama==0.4.4
 commonmark==0.9.1
-greenlet==0.4.13
-hpy==0.0.3
+Deprecated==1.2.13
+execnet==1.9.0
+Flask==2.0.2
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
+Flask-Script==2.0.6
+Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==2.5.1
+gevent==21.8.0
+gevent-websocket==0.10.1
+grafana-api==1.0.3
+greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
-kafka-python==2.0.2
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+livereload==2.5.1
+Mako==1.1.6
+MarkupSafe==2.0.1
+packaging==21.3
+pip-autoremove==0.10.0
+pluggy==1.0.0
+psycopg2==2.9.2
+py==1.11.0
 Pygments==2.10.0
-readline==6.2.4.1
+pyparsing==3.0.6
+pyperclip==1.8.2
+pytest==6.2.5
+pytest-flask==1.2.0
+pytest-forked==1.3.0
+pytest-xdist==2.4.0
+python-engineio==4.3.0
+python-socketio==5.5.0
+redis==4.0.2
 requests==2.26.0
-rich==10.15.1
+rich==10.15.2
 six==1.16.0
+SQLAlchemy==1.4.27
+toml==0.10.2
 tornado==6.1
-typing_extensions==4.0.1
 urllib3==1.26.7
+Werkzeug==2.0.2
+wrapt==1.13.3
+zope.event==4.5.0
+zope.interface==5.4.0
