--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.0.8
 click==8.0.3
 colorama==0.4.4
 commonmark==0.9.1
+datedelta==1.3
 Deprecated==1.2.13
 execnet==1.9.0
 Flask==2.0.2
