--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.7.5
 appdirs==1.4.4
+astroid==2.9.0
 attrs==21.2.0
 auto-profiler==1.4
+backports.entry-points-selectable==1.1.1
 bidict==0.21.4
 certifi==2021.10.8
 charset-normalizer==2.0.8
@@ -10,7 +12,10 @@ colorama==0.4.4
 commonmark==0.9.1
 datedelta==1.3
 Deprecated==1.2.13
+distlib==0.3.4
 execnet==1.9.0
+filelock==3.4.0
+flake8==4.0.1
 Flask==2.0.2
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
@@ -25,27 +30,38 @@ greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 iniconfig==1.1.1
+isort==5.10.1
 itsdangerous==2.0.1
 jedi==0.18.1
 Jinja2==3.0.3
+lazy-object-proxy==1.7.1
 livereload==2.5.1
 Mako==1.1.6
 MarkupSafe==2.0.1
+mccabe==0.6.1
 MongoAlchemy==0.19
 monotonic==1.6
 packaging==21.3
 parso==0.8.3
 pip-autoremove==0.10.0
+platformdirs==2.4.0
 pluggy==1.0.0
 prompt-toolkit==3.0.24
 psycopg2==2.9.2
 ptpython==3.0.20
 py==1.11.0
+py-cpuinfo==8.0.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
 Pygments==2.10.0
+pylint==2.12.2
+pylint-flask==0.6
+pylint-plugin-utils==0.6
 pymongo==4.0.1
 pyparsing==3.0.6
 pyperclip==1.8.2
 pytest==6.2.5
+pytest-benchmark==3.4.1
 pytest-flask==1.2.0
 pytest-forked==1.3.0
 pytest-xdist==2.4.0
@@ -58,8 +74,11 @@ six==1.16.0
 SQLAlchemy==1.4.27
 toml==0.10.2
 tornado==6.1
+tox==3.24.4
 tree-format==0.1.1
+typing_extensions==4.0.1
 urllib3==1.26.7
+virtualenv==20.10.0
 wcwidth==0.2.5
 Werkzeug==2.0.2
 wrapt==1.13.3
