--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -24,5 +24,6 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
-          make test
+          cd src
+          pytest -vv -n 4
 
